package com.vitalink.platform.entity.enums;

public enum AppointmentType {
    IN_PERSON,
    TELEMEDICINE
}
