package com.vitalink.platform.entity.enums;

public enum CouncilType {
    CRM,
    CRO,
    COREN,
    CRF,
    CRP,
    CREFITO,
    OTHER
}
