package com.vitalink.platform.entity.enums;

public enum CoverageType {
    AMBULATORIAL,
    HOSPITALAR,
    ODONTOLOGICO,
    COMPLETO
}
