package com.vitalink.platform.entity.enums;

public enum Gender {
    MALE,
    FEMALE,
    OTHER,
    UNDISCLOSED
}
