package com.vitalink.platform.entity.enums;

public enum OrganizationType {
    HOSPITAL,
    CLINIC,
    INSURER
}
