package com.vitalink.platform.entity.enums;

public enum RecordStatus {
    ACTIVE,
    INACTIVE
}
