package com.vitalink.platform.entity.enums;

public enum UserStatus {
    ACTIVE,
    INACTIVE,
    PENDING,
    BLOCKED
}
