@startuml VitaLink - Modelo de Dominio
' Renderize em https://www.plantuml.com/plantuml ou com o plugin PlantUML (VS Code / IntelliJ).
' Estilo equivalente ao diagrama de referencia: caixas de classe, enums, atributos e metodos.

skinparam shadowing false
skinparam class {
  BackgroundColor #FDFDC4
  BorderColor Black
  ArrowColor Black
}
skinparam classAttributeIconSize 0
hide circle

package "com.vitalink.platform" as pkg {

  abstract class BaseEntity {
    - id : UUID
    - createdAt : Instant
    - updatedAt : Instant
    - createdBy : String
    - updatedBy : String
    - version : Long
  }

  class User {
    - email : String
    - password : String
    - fullName : String
    - status : UserStatus
    + addRole(role : Role) : void
    + isActive() : boolean
  }

  class Role {
    - id : UUID
    - name : String
    - description : String
  }

  class Organization {
    - legalName : String
    - tradeName : String
    - cnpj : String
    - type : OrganizationType
    - email : String
    - phone : String
    - status : RecordStatus
    + isInsurer() : boolean
  }

  class HealthcareProfessional {
    - fullName : String
    - cpf : String
    - councilType : CouncilType
    - councilNumber : String
    - councilState : String
    - specialty : String
    - email : String
    - phone : String
    - status : RecordStatus
  }

  class Patient {
    - fullName : String
    - cpf : String
    - birthDate : LocalDate
    - gender : Gender
    - email : String
    - phone : String
    - status : RecordStatus
  }

  class InsurancePlan {
    - name : String
    - ansCode : String
    - coverageType : CoverageType
    - status : RecordStatus
  }

  class Appointment {
    - scheduledStart : OffsetDateTime
    - scheduledEnd : OffsetDateTime
    - status : AppointmentStatus
    - type : AppointmentType
    - reason : String
    - notes : String
  }

  class Address <<embeddable>> {
    - street : String
    - number : String
    - complement : String
    - district : String
    - city : String
    - state : String
    - zipCode : String
    - country : String
  }

  enum UserStatus {
    ACTIVE
    INACTIVE
    PENDING
    BLOCKED
  }

  enum RecordStatus {
    ACTIVE
    INACTIVE
  }

  enum OrganizationType {
    HOSPITAL
    CLINIC
    INSURER
  }

  enum Gender {
    MALE
    FEMALE
    OTHER
    UNDISCLOSED
  }

  enum CouncilType {
    CRM
    CRO
    COREN
    CRF
    CRP
    CREFITO
    OTHER
  }

  enum CoverageType {
    AMBULATORIAL
    HOSPITALAR
    ODONTOLOGICO
    COMPLETO
  }

  enum AppointmentStatus {
    SCHEDULED
    CONFIRMED
    COMPLETED
    CANCELLED
    NO_SHOW
  }

  enum AppointmentType {
    IN_PERSON
    TELEMEDICINE
  }

  ' --- Heranca: toda entidade compartilha id/auditoria/versao ---
  BaseEntity <|-- User
  BaseEntity <|-- Organization
  BaseEntity <|-- HealthcareProfessional
  BaseEntity <|-- Patient
  BaseEntity <|-- InsurancePlan
  BaseEntity <|-- Appointment

  ' --- Associacoes (com multiplicidades) ---
  User "*" -- "*" Role : possui >
  User "1" -- "0..1" Patient
  User "1" -- "0..1" HealthcareProfessional

  Organization "1" -- "0..*" HealthcareProfessional : emprega >
  Organization "1" -- "0..*" InsurancePlan : oferta >

  Patient "1" -- "0..*" Appointment
  HealthcareProfessional "1" -- "0..*" Appointment
  Organization "1" -- "0..*" Appointment
  InsurancePlan "0..1" -- "0..*" Appointment

  ' --- Composicao do endereco (tipo embutido) ---
  Organization "1" *-- "0..1" Address
  Patient "1" *-- "0..1" Address
}
@enduml
